# AutoCalendar

./: .env  .gitignore  README.md  address.json  calender_event.py  google_calendar_api.py  main.py  main.spec  pdf_procesor.py  pyproject.toml
src/: credentials.json  pdf_procesor.py  token.json
src/autocalendar/: get_creds.py  main.py  pdf_procesor.py  utils.py
src/autocalendar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
