[project]
name = "autocalendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "pydantic",
    "pydantic-ai",
    "pypdf",
    "python-dotenv",
    "watchdog",
]


[project.optional-dependencies]
build = ["setuptools", "cython"]
compile = ["cchardet"]

[tool.uv]
no-build-isolation-package = ["cchardet"]

[tool.uv.workspace]
members = [
    "autocalendar",
]

[project.scripts]
autocalendar = "autocalendar:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
